vhosts conf done

--- a/docker/.env
+++ b/docker/.env
@@ -8,5 +8,8 @@ APACHE_EXPOSED_PORT=8181
 WORK_ROOT_DIR=/usr/local/apache2/htdocs
 LOG_APACHE_ROOT_DIR=/usr/local/apache2/logs
 
+# php 7.4
+PHP_IP=192.168.0.33
+PHP_ROOT_DIR=/usr/local/etc
 
 NETWORK_SUBNET=192.168.0.0/24
