--- a/docker/apache/httpd-vhosts.conf
+++ b/docker/apache/httpd-vhosts.conf
@@ -1,14 +1,29 @@
 <VirtualHost *:80>
-    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://${PHP_IP}:${APACHE_EXPOSED_PORT}${PHP_APP_DIR}/$1
+    DocumentRoot ${APACHE_ROOT_DIR}
 
-    DocumentRoot ${APACHE_ROOT_DIR}/htdocs
-
-    <Directory ${APACHE_ROOT_DIR}/htdocs>
+    <Directory ${APACHE_ROOT_DIR}>
         Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
 
-    ErrorLog ${APACHE_ROOT_DIR}/logs/error.log
-    CustomLog ${APACHE_ROOT_DIR}/logs/access.log common
+    ErrorLog ${APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/project_1
+    ServerName local.docker.test
+    ServerAlias local.docker.test
+    <Directory ${APACHE_ROOT_DIR}/project_1>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+
+    ErrorLog ${APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${APACHE_ROOT_DIR}/main-access.log combined
 </VirtualHost>
