--- a/docker/apache/httpd.conf
+++ b/docker/apache/httpd.conf
@@ -1,4 +1,4 @@
-ServerRoot ${APACHE_ROOT_DIR}
+ServerRoot /usr/local/apache2
 Listen 80
 
 LoadModule mpm_event_module modules/mod_mpm_event.so
@@ -23,6 +23,28 @@ LoadModule version_module modules/mod_version.so
 LoadModule unixd_module modules/mod_unixd.so
 LoadModule status_module modules/mod_status.so
 LoadModule autoindex_module modules/mod_autoindex.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule rewrite_module modules/mod_rewrite.so
+
+LoadModule actions_module modules/mod_actions.so
+LoadModule allowmethods_module modules/mod_allowmethods.so
+LoadModule asis_module modules/mod_asis.so
+LoadModule auth_digest_module modules/mod_auth_digest.so
+LoadModule cache_module modules/mod_cache.so
+LoadModule cache_disk_module modules/mod_cache_disk.so
+LoadModule cgi_module modules/mod_cgi.so
+LoadModule file_cache_module modules/mod_file_cache.so
+LoadModule include_module modules/mod_include.so
+LoadModule isapi_module modules/mod_isapi.so
+LoadModule log_config_module modules/mod_log_config.so
+LoadModule mime_module modules/mod_mime.so
+LoadModule negotiation_module modules/mod_negotiation.so
+LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule setenvif_module modules/mod_setenvif.so
+LoadModule userdir_module modules/mod_userdir.so
+LoadModule version_module modules/mod_version.so
+LoadModule vhost_alias_module modules/mod_vhost_alias.so
+
 <IfModule !mpm_prefork_module>
 </IfModule>
 <IfModule mpm_prefork_module>
@@ -42,10 +64,10 @@ ServerAdmin you@example.com
    Require all denied
 </Directory>
 
-DocumentRoot ${APACHE_ROOT_DIR}/htdocs
-<Directory ${APACHE_ROOT_DIR}/htdocs>
+DocumentRoot /usr/local/apache2/htdocs
+<Directory /usr/local/apache2/htdocs>
    Options Indexes FollowSymLinks
-   AllowOverride None
+   AllowOverride All
    Require all granted
 </Directory>
 
@@ -73,13 +95,13 @@ LogLevel info
 </IfModule>
 
 <IfModule alias_module>
-   ScriptAlias /cgi-bin/ ${APACHE_ROOT_DIR}/cgi-bin/
+   ScriptAlias /cgi-bin/ /usr/local/apache2/cgi-bin/
 </IfModule>
 
 <IfModule cgid_module>
 </IfModule>
 
-<Directory ${APACHE_ROOT_DIR}/cgi-bin>
+<Directory /usr/local/apache2/cgi-bin>
    AllowOverride None
    Options None
    Require all granted
