--- a/docker/apache/httpd-vhosts.conf
+++ b/docker/apache/httpd-vhosts.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     DocumentRoot ${APACHE_ROOT_DIR}
-
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:${PHP_74_EXPOSED_PORT}${WORK_ROOT_DIR}/$1"
     <Directory ${APACHE_ROOT_DIR}>
         Options Indexes FollowSymLinks
         AllowOverride All
@@ -14,6 +14,7 @@
 
 <VirtualHost *:80>
     DocumentRoot ${APACHE_ROOT_DIR}/project_1
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:${PHP_74_EXPOSED_PORT}${WORK_ROOT_DIR}/project_1/$1"
     ServerName local.docker.test
     ServerAlias local.docker.test
     <Directory ${APACHE_ROOT_DIR}/project_1>
