--- a/docker/.env
+++ b/docker/.env
@@ -9,7 +9,8 @@ WORK_ROOT_DIR=/usr/local/apache2/htdocs
 LOG_APACHE_ROOT_DIR=/usr/local/apache2/logs
 
 # php 7.4
-PHP_IP=192.168.0.33
+PHP_74_IP=192.168.0.33
 PHP_ROOT_DIR=/usr/local/etc
+PHP_74_EXPOSED_PORT=9074
 
 NETWORK_SUBNET=192.168.0.0/24
