--- a/docker/apache/httpd-vhosts.conf
+++ b/docker/apache/httpd-vhosts.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     DocumentRoot ${APACHE_ROOT_DIR}
-    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:${PHP_74_EXPOSED_PORT}${WORK_ROOT_DIR}/$1"
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://192.168.0.33:9074/usr/local/apache2/htdocs/$1
     <Directory ${APACHE_ROOT_DIR}>
         Options Indexes FollowSymLinks
         AllowOverride All
