--- a/docker/php/www.conf
+++ b/docker/php/www.conf
@@ -2,7 +2,10 @@
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
 [www]
-
+user = ${WEB_USER}
+group = ${WEB_GROUP}
+listen = 9000
+listen.allowed_clients = ${APACHE_IP}
 ; Per pool prefix
 ; It only applies on the following directives:
 ; - 'access.log'
@@ -20,8 +23,6 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = laravel
-group = laravel
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -33,7 +34,6 @@ group = laravel
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = 127.0.0.1:9000
 
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on FreeBSD and OpenBSD)
@@ -378,7 +378,7 @@ pm.max_spare_servers = 3
 ; Note: on highloaded environement, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-;catch_workers_output = yes
+catch_workers_output = yes
 
 ; Decorate worker output with prefix and suffix containing information about
 ; the child that writes to the log and if stdout or stderr is used as well as
@@ -433,8 +433,7 @@ pm.max_spare_servers = 3
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-;php_flag[display_errors] = off
+php_flag[display_errors] = yes
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
-memory_limit=-1
