--- a/docker/apache/conf/extra/httpd-vhosts.conf
+++ b/docker/apache/conf/extra/httpd-vhosts.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     DocumentRoot ${APACHE_ROOT_DIR}
-    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://192.168.0.33:9074/usr/local/apache2/htdocs/$1
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/$1
     <Directory ${APACHE_ROOT_DIR}>
         Options Indexes FollowSymLinks
         AllowOverride All
@@ -13,10 +13,10 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    DocumentRoot ${APACHE_ROOT_DIR}/project_1
-    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:${PHP_74_EXPOSED_PORT}${WORK_ROOT_DIR}/project_1/$1"
-    ServerName local.docker.test
-    ServerAlias local.docker.test
+    DocumentRoot ${APACHE_ROOT_DIR}/valsports
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/valsports/$1"
+    ServerName local.valsports.fr
+    ServerAlias local.valsports.fr
     <Directory ${APACHE_ROOT_DIR}/project_1>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
