--- a/docker/apache/Dockerfile
+++ b/docker/apache/Dockerfile
@@ -4,8 +4,8 @@ ARG WEB_USER
 ARG WEB_GROUP
 ARG APACHE_ROOT_DIR
 
-COPY httpd-vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
-COPY httpd.conf /usr/local/apache2/conf/httpd.conf
+COPY ./conf/extra/httpd-vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
+COPY ./conf/httpd.conf /usr/local/apache2/conf/httpd.conf
 
 RUN chown ${WEB_USER}:${WEB_GROUP} ${APACHE_ROOT_DIR}
 
