--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - ../src:${WORK_ROOT_DIR}
       - ../logs/apache:${LOG_APACHE_ROOT_DIR}
+      - ./apache/conf/httpd.conf:/usr/local/apache2/conf/httpd.conf
+      - ./apache/conf/extra/httpd-vhosts.conf:/usr/local/apache2/conf/extra/httpd-vhosts.conf
     ports:
       - ${APACHE_EXPOSED_PORT}:80
     networks:
@@ -32,7 +34,7 @@ services:
   php_7_4_img:
     container_name: ${COMPOSE_PROJECT_NAME}_php_7_4
     build:
-      context: ./php
+      context: ./php/74
       args:
         - WEB_USER=${WEB_USER}
         - WEB_GROUP=${WEB_GROUP}
@@ -40,9 +42,8 @@ services:
         - WORK_ROOT_DIR=${WORK_ROOT_DIR}
     volumes:
       - ../src:${WORK_ROOT_DIR}:delegated
+      - ./php/74/www.conf:${PHP_ROOT_DIR}/php-fpm.d/www.conf
       - ../logs/php:${PHP_ROOT_DIR}/logs
-    ports:
-      - ${PHP_74_EXPOSED_PORT}:9000
     networks:
       public_net:
         ipv4_address: ${PHP_74_IP}
