--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -54,6 +54,26 @@ services:
       - APACHE_EXPOSED_PORT=${APACHE_EXPOSED_PORT}
       - WEB_USER=${WEB_USER}
       - WEB_GROUP=${WEB_GROUP}
+      - MYSQL_IP=${MYSQL_IP}
+      - MYSQL_ROOT_USER=${MYSQL_ROOT_USER}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+  mysql_img:
+    container_name: ${COMPOSE_PROJECT_NAME}_mysql
+    build:
+      context: ./mysql
+      args:
+        - MYSQL_CONTAINER_USER=${MYSQL_CONTAINER_USER}
+        - MYSQL_CONTAINER_GROUP=${MYSQL_CONTAINER_GROUP}
+    volumes:
+      - ../logs/mysql:${MYSQL_LOG_DIR}
+      - ../database:${MYSQL_DATA_DIR}
+    networks:
+      public_net:
+        ipv4_address: ${MYSQL_IP}
+    environment:
+      - MYSQL_CONTAINER_USER=${MYSQL_CONTAINER_USER}
+      - MYSQL_CONTAINER_GROUP=${MYSQL_CONTAINER_GROUP}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
 networks:
   public_net:
     driver: bridge
