--- a/docker/php/74/Dockerfile
+++ b/docker/php/74/Dockerfile
@@ -39,6 +39,7 @@ RUN docker-php-ext-install gd
 RUN docker-php-ext-configure gd --with-jpeg --with-freetype
 RUN docker-php-ext-install intl
 RUN docker-php-ext-install pdo_mysql
+RUN docker-php-ext-install mysqli
 RUN docker-php-ext-install soap
 RUN docker-php-ext-configure soap
 RUN docker-php-ext-install xsl
