--- a/docker/.env
+++ b/docker/.env
@@ -13,4 +13,15 @@ PHP_74_IP=192.168.0.121
 PHP_ROOT_DIR=/usr/local/etc
 PHP_74_EXPOSED_PORT=9074
 
+# mysql
+
+MYSQL_IP=192.168.0.123
+MYSQL_CONTAINER_USER=mysql
+MYSQL_CONTAINER_GROUP=mysql
+MYSQL_ROOT_USER=root
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATA_DIR=/var/lib/mysql
+MYSQL_LOG_DIR=/var/log/mysql
+
+
 NETWORK_SUBNET=192.168.0.120/24
