--- a/docker/.env
+++ b/docker/.env
@@ -22,6 +22,7 @@ MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATA_DIR=/var/lib/mysql
 MYSQL_LOG_DIR=/var/log/mysql
+MYSQL_EXPOSED_PORT=3306
 
 
 NETWORK_SUBNET=192.168.0.120/24
