--- a/docker/.env
+++ b/docker/.env
@@ -24,5 +24,8 @@ MYSQL_DATA_DIR=/var/lib/mysql
 MYSQL_LOG_DIR=/var/log/mysql
 MYSQL_EXPOSED_PORT=3306
 
+#phpmyadmin
+PHP_MY_ADMIN_IP=192.168.0.124
+PHP_MY_ADMIN_EXPOSED_PORT=8282
 
 NETWORK_SUBNET=192.168.0.120/24
