--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -77,6 +77,19 @@ services:
       - MYSQL_CONTAINER_USER=${MYSQL_CONTAINER_USER}
       - MYSQL_CONTAINER_GROUP=${MYSQL_CONTAINER_GROUP}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+      - ${PHP_MY_ADMIN_EXPOSED_PORT}:80
+    environment:
+      - PMA_HOST=${MYSQL_IP}
+      - PMA_PORT=${MYSQL_EXPOSED_PORT}
+      - PMA_USER=${MYSQL_ROOT_USER}
+      - PMA_PASSWORD=${MYSQL_ROOT_PASSWORD}
+    networks:
+      public_net:
+        ipv4_address: ${PHP_MY_ADMIN_IP}
 networks:
   public_net:
     driver: bridge
