--- a/docker/apache/conf/extra/httpd-vhosts.conf
+++ b/docker/apache/conf/extra/httpd-vhosts.conf
@@ -7,9 +7,9 @@
         Require all granted
     </Directory>
 
-    ErrorLog ${APACHE_ROOT_DIR}/main-error.log
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
     LogLevel warn
-    CustomLog ${APACHE_ROOT_DIR}/main-access.log combined
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
 </VirtualHost>
 
 <VirtualHost *:80>
@@ -24,7 +24,7 @@
         Allow from all
     </Directory>
 
-    ErrorLog ${APACHE_ROOT_DIR}/main-error.log
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
     LogLevel warn
-    CustomLog ${APACHE_ROOT_DIR}/main-access.log combined
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
 </VirtualHost>
