--- a/docker/.env
+++ b/docker/.env
@@ -4,7 +4,7 @@ WEB_USER=www-data
 WEB_GROUP=www-data
 
 APACHE_IP=192.168.0.122
-APACHE_EXPOSED_PORT=8181
+APACHE_EXPOSED_PORT=80
 WORK_ROOT_DIR=/usr/local/apache2/htdocs
 LOG_APACHE_ROOT_DIR=/usr/local/apache2/logs
 
