--- a/docker/php/74/www.conf
+++ b/docker/php/74/www.conf
@@ -17,5 +17,6 @@ pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 
 catch_workers_output = yes
-php_admin_value[memory_limit] = -1
+php_admin_value[memory_limit] =-1
 php_admin_value[error_log] = ${PHP_ROOT_DIR}/logs/error.log
+php_value[memory_limit]=-1
