add redis and elasticsearch

--- a/docker/.env
+++ b/docker/.env
@@ -28,4 +28,12 @@ MYSQL_EXPOSED_PORT=3306
 PHP_MY_ADMIN_IP=192.168.0.124
 PHP_MY_ADMIN_EXPOSED_PORT=8282
 
+#elasticsearch
+ELASTIC_SEARCH_IP=192.168.0.125
+ELASTIC_SEARCH_EXPOSED_PORT=9200
+
+#redis
+REDIS_IP=192.168.0.126
+REDIS_EXPOSED_PORT=6379
+
 NETWORK_SUBNET=192.168.0.120/24
