--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -94,6 +94,24 @@ services:
     networks:
       public_net:
         ipv4_address: ${PHP_MY_ADMIN_IP}
+  elasticsearch:
+    image: elasticsearch:7.10.1
+    container_name: ${COMPOSE_PROJECT_NAME}_elasticsearch
+    restart: always
+    ports:
+      - ${ELASTIC_SEARCH_EXPOSED_PORT}:9200
+    networks:
+      public_net:
+        ipv4_address: ${ELASTIC_SEARCH_IP}
+  redis:
+    image: redis
+    container_name: ${COMPOSE_PROJECT_NAME}_redis
+    restart: always
+    ports:
+      - ${REDIS_EXPOSED_PORT}:6379
+    networks:
+      public_net:
+        ipv4_address: ${REDIS_IP}
 networks:
   public_net:
     driver: bridge
