add php 7.2 and 5

--- a/docker/apache/conf/extra/httpd-vhosts.conf
+++ b/docker/apache/conf/extra/httpd-vhosts.conf
@@ -17,7 +17,24 @@
     ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/valsports/$1"
     ServerName local.valsports.fr
     ServerAlias local.valsports.fr
-    <Directory ${APACHE_ROOT_DIR}/project_1>
+    <Directory ${APACHE_ROOT_DIR}/valsports>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/instinct_premium
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/instinct_premium/$1"
+    ServerName local.instinct-premium
+    ServerAlias local.instinct-premium
+    <Directory ${APACHE_ROOT_DIR}/instinct_premium>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
         Order allow,deny
