--- a/docker/.env
+++ b/docker/.env
@@ -8,11 +8,6 @@ APACHE_EXPOSED_PORT=80
 WORK_ROOT_DIR=/usr/local/apache2/htdocs
 LOG_APACHE_ROOT_DIR=/usr/local/apache2/logs
 
-# php 7.4
-PHP_74_IP=192.168.0.121
-PHP_ROOT_DIR=/usr/local/etc
-PHP_74_EXPOSED_PORT=9074
-
 # mysql
 
 MYSQL_IP=192.168.0.123
@@ -22,7 +17,7 @@ MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATA_DIR=/var/lib/mysql
 MYSQL_LOG_DIR=/var/log/mysql
-MYSQL_EXPOSED_PORT=3306
+MYSQL_EXPOSED_PORT=3336
 
 #phpmyadmin
 PHP_MY_ADMIN_IP=192.168.0.124
@@ -30,8 +25,23 @@ PHP_MY_ADMIN_EXPOSED_PORT=8282
 
 #elasticsearch
 ELASTIC_SEARCH_EXPOSED_PORT=9200
+ELASTIC_IP=192.168.0.125
 
 #redis
 REDIS_EXPOSED_PORT=6379
+REDIS_IP=192.168.0.126
+
+# php
+PHP_ROOT_DIR=/usr/local/etc
+#7.4
+PHP_74_IP=192.168.0.127
+#7.3
+PHP_73_IP=192.168.0.128
+#7.2
+PHP_72_IP=192.168.0.129
+#7.1
+PHP_71_IP=192.168.0.130
+#5
+PHP_56_IP=192.168.0.131
 
 NETWORK_SUBNET=192.168.0.120/24
