--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         - PHP_74_IP=${PHP_74_IP}
         - PHP_72_IP=${PHP_72_IP}
         - PHP_56_IP=${PHP_56_IP}
+        - MYSQL_IP=${MYSQL_IP}
     volumes:
       - ../../projects:${WORK_ROOT_DIR}
       - ../logs/apache:${LOG_APACHE_ROOT_DIR}
@@ -34,6 +35,7 @@ services:
       - PHP_72_IP=${PHP_72_IP}
       - PHP_56_IP=${PHP_56_IP}
       - WORK_ROOT_DIR=${WORK_ROOT_DIR}
+      - MYSQL_IP=${MYSQL_IP}
   php_7_4:
     container_name: ${COMPOSE_PROJECT_NAME}_php74
     build:
@@ -43,6 +45,7 @@ services:
         - WEB_GROUP=${WEB_GROUP}
         - PHP_ROOT_DIR=${PHP_ROOT_DIR}
         - WORK_ROOT_DIR=${WORK_ROOT_DIR}
+        - MYSQL_IP=${MYSQL_IP}
     volumes:
       - ../../projects:${WORK_ROOT_DIR}:delegated
       - ./php/74/www.conf:${PHP_ROOT_DIR}/php-fpm.d/www.conf
@@ -64,6 +67,8 @@ services:
       - MYSQL_ROOT_USER=${MYSQL_ROOT_USER}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_EXPOSED_PORT=${MYSQL_EXPOSED_PORT}
+      - ELASTIC_IP=${ELASTIC_IP}
+      - REDIS_IP=${REDIS_IP}
   php_7_2:
     container_name: ${COMPOSE_PROJECT_NAME}_php72
     build:
@@ -94,6 +99,8 @@ services:
       - MYSQL_ROOT_USER=${MYSQL_ROOT_USER}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_EXPOSED_PORT=${MYSQL_EXPOSED_PORT}
+      - ELASTIC_IP=${ELASTIC_IP}
+      - REDIS_IP=${REDIS_IP}
   php_5_6:
     container_name: ${COMPOSE_PROJECT_NAME}_php56
     build:
@@ -124,6 +131,8 @@ services:
       - MYSQL_ROOT_USER=${MYSQL_ROOT_USER}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_EXPOSED_PORT=${MYSQL_EXPOSED_PORT}
+      - ELASTIC_IP=${ELASTIC_IP}
+      - REDIS_IP=${REDIS_IP}
   mysql:
     container_name: ${COMPOSE_PROJECT_NAME}_mysql
     build:
@@ -165,12 +174,18 @@ services:
       - 9300:9300
     environment:
       - discovery.type=single-node
+    networks:
+      public_net:
+        ipv4_address: ${ELASTIC_IP}
   redis:
     image: redis
     container_name: ${COMPOSE_PROJECT_NAME}_redis
     restart: always
     ports:
       - ${REDIS_EXPOSED_PORT}:6379
+    networks:
+      public_net:
+        ipv4_address: ${REDIS_IP}
 networks:
   public_net:
     driver: bridge
