thomosis vhost done

--- a/docker/apache/conf/extra/httpd-vhosts.conf
+++ b/docker/apache/conf/extra/httpd-vhosts.conf
@@ -20,7 +20,24 @@
     <Directory ${APACHE_ROOT_DIR}/valsports>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
-        Order allow,deny
+        Require all granted
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/aulp-amateis
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/aulp-amateis/$1"
+    ServerName local.aulp.fr
+    ServerAlias local.aulp.fr
+    <Directory ${APACHE_ROOT_DIR}/aulp-amateis>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
         Allow from all
     </Directory>
 
@@ -37,7 +54,124 @@
     <Directory ${APACHE_ROOT_DIR}/instinct_premium>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
-        Order allow,deny
+        Require all granted
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+#peva
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/$1"
+    ServerName peva.com
+    ServerAlias peva.com
+    <Directory ${APACHE_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
+        Allow from all
+    </Directory>
+    <LocationMatch ^(.*(?<!index)\.php)$>
+      ProxyPass fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/cms/$1
+    </LocationMatch>
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/$1"
+    <LocationMatch ^(.*(?<!index)\.php)$>
+       ProxyPass fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/cms/$1
+    </LocationMatch>
+    ServerName ete.local.abondance-tourisme.com
+    ServerAlias ete.local.abondance-tourisme.com
+    <Directory ${APACHE_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/$1"
+    <LocationMatch ^(.*(?<!index)\.php)$>
+       ProxyPass fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/cms/$1
+    </LocationMatch>
+    ServerName hiver.local.abondance-tourisme.com
+    ServerAlias hiver.local.abondance-tourisme.com
+    <Directory ${APACHE_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/themosis2/htdocs
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/themosis2/htdocs/$1"
+    <LocationMatch ^(.*(?<!index)\.php)$>
+       ProxyPass fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/cms/$1
+    </LocationMatch>
+    ServerName local.test.docker.thomo2
+    ServerAlias local.test.docker.thomo2
+    <Directory ${APACHE_ROOT_DIR}/themosis2/htdocs>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/wordpress
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/wordpress/$1"
+    ServerName wordpress.local
+    ServerAlias wordpress.local
+    <Directory ${APACHE_ROOT_DIR}/wordpress>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/thomosis1/htdocs
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/thomosis1/htdocs/$1"
+    <LocationMatch ^(.*(?<!index)\.php)$>
+        ProxyPass fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/cms/$1
+    </LocationMatch>
+    ServerName local.test.docker.thomo1
+    ServerAlias local.test.docker.thomo1
+    <Directory ${APACHE_ROOT_DIR}/thomosis1/htdocs>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
         Allow from all
     </Directory>
 
