--- a/docker/apache/conf/httpd.conf
+++ b/docker/apache/conf/httpd.conf
@@ -36,13 +36,8 @@ LoadModule cgi_module modules/mod_cgi.so
 LoadModule file_cache_module modules/mod_file_cache.so
 LoadModule include_module modules/mod_include.so
 LoadModule isapi_module modules/mod_isapi.so
-LoadModule log_config_module modules/mod_log_config.so
-LoadModule mime_module modules/mod_mime.so
 LoadModule negotiation_module modules/mod_negotiation.so
-LoadModule rewrite_module modules/mod_rewrite.so
-LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule userdir_module modules/mod_userdir.so
-LoadModule version_module modules/mod_version.so
 LoadModule vhost_alias_module modules/mod_vhost_alias.so
 
 <IfModule !mpm_prefork_module>
@@ -64,22 +59,30 @@ ServerAdmin you@example.com
    Require all denied
 </Directory>
 
+#
+# Note that from this point forward you must specifically allow
+# particular features to be enabled - so if something's not working as
+# you might expect, make sure that you have specifically enabled it
+# below.
+#
+HostnameLookups Off
+
 DocumentRoot /usr/local/apache2/htdocs
 <Directory /usr/local/apache2/htdocs>
-   Options Indexes FollowSymLinks
+   Options +Indexes +FollowSymLinks +Multiviews
    AllowOverride All
    Require all granted
 </Directory>
 
 <IfModule dir_module>
-   DirectoryIndex index.php index.html
+   DirectoryIndex index.php index.php3 index.html index.htm
 </IfModule>
 
 <Files ".ht*">
    Require all denied
 </Files>
 
-ErrorLog /proc/self/fd/2
+ErrorLog "${LOG_APACHE_ROOT_DIR}/apache_error.log"
 
 LogLevel info
 
@@ -91,7 +94,7 @@ LogLevel info
      LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" %I %O" combinedio
    </IfModule>
 
-   CustomLog /proc/self/fd/1 common
+   CustomLog "${LOG_APACHE_ROOT_DIR}/access.log" common
 </IfModule>
 
 <IfModule alias_module>
@@ -113,10 +116,36 @@ LogLevel info
 
 <IfModule mime_module>
    TypesConfig conf/mime.types
-
+   AddEncoding x-compress .Z
+   AddEncoding x-gzip .gz .tgz
    AddType application/x-compress .Z
    AddType application/x-gzip .gz .tgz
+   AddType application/x-httpd-php .php
+   AddType application/x-httpd-php .php3
 </IfModule>
+#EnableMMAP off
+EnableSendfile off
+
+# AcceptFilter: On Windows, none uses accept() rather than AcceptEx() and
+# will not recycle sockets between connections. This is useful for network
+# adapters with broken driver support, as well as some virtual network
+# providers such as vpn drivers, or spam, virus or spyware filters.
+AcceptFilter http none
+AcceptFilter https none
+
+# The ThreadStackSize directive sets the size of the stack (for autodata)
+# of threads which handle client connections and call modules to help process
+# those connections. In most cases the operating system default for stack size
+# is reasonable, but there are some conditions where it may need to be adjusted.
+# Apache httpd may crash when using some third-party modules which use a
+# relatively large amount of autodata storage or automatically restart with
+# message like: child process 12345 exited with status 3221225725 -- Restarting.
+# This type of crash is resolved by setting ThreadStackSize to a value higher
+# than the operating system default.
+ThreadStackSize 8388608
+
+# Fancy directory listings
+Include conf/extra/httpd-autoindex.conf
 
 Include conf/extra/httpd-vhosts.conf
 
